[tool.poetry]
name = "harvest-festival"
version = "0.1.0"
description = ""
authors = ["Santhosh <santhosh.kumar.divakar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.1.0"
gunicorn = "20.1.0"
werkzeug = "^3.0.1"
pillow = "^10.1.0"
icecream = "^2.1.3"
supabase= "^2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
